# src/main/java/com/inhouse/application/resource/community/PostCommunityOutputDto.java
@@ -1,0 +1,11 @@
+
+package com.inhouse.application.resource.community;
+
+import lombok.Data;
+
+@Data
+public class PostCommunityOutputDto {
+ 
+    private int communityId;
+
+}
